API change for IRemoteFileSystemBrowser to support both requests for files and directories.  This to addtress bug:  https://bugs.eclipse.org/bugs/show_bug.cgi?id=215250